--- a/yassBday/index.html
+++ b/yassBday/index.html
@@ -115,43 +115,11 @@
 				<p>karena jujur</p>
 				<p>aku ngerasa kyk kita punya koneksi gt wkwkw</p>
 				<p>dan sayang kan kalo dibiarin gt ajaa</p>
-				<p>nanti pokoknya abis aku balik kita langsung main yaa hehe😉</p>
+				<p>nanti pokoknya abis aku balik,</p>
+				<p>kita langsung main yaa hehe😉</p>
 				<p>udah segitu dulu</p>
 				<p>bingung jg mau nulis apaan lagi WKWKWK</p>
 				<p>happy birthday yaa yasminn cantikk❤️</p>
-				<!-- <p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p> -->
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
