--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
 
-								<li><i class="devicon-kotlin-plain-wordmark colored"></i></li>
+								<li><span><i class="devicon-kotlin-plain-wordmark colored"></i></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
