--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
 								   My interests and experiences are includes Software Engineering, Backend Engineering and Mobile Engineering (specifically Android) as well as Full Stack Development on both Web and Mobile Apps. <br/>
 								   I strive to gain more experience and wish to utilize the knowledge for a better future.</p>
 							</header>
-							<ul>
+							<ul class="icons major">
 								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
 								<br/>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
+								<br/>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
