--- a/index.html
+++ b/index.html
@@ -46,17 +46,15 @@
 								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
+								<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/androidstudio/androidstudio-original.svg" /></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-java-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-flutter-plain colored" style="font-size: 120px"></i></li>
 								<br/>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<br/>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
-								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 110px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+							
 							</ul>
 						</div>
 					</section>
