--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
-								<li><img src='https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/devicon/devicon-original.svg'></li>
+								<li><i class="devicon-androidstudio-plain colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-java-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-flutter-plain colored" style="font-size: 120px"></i></li>
