--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 								   I strive to gain more experience and wish to utilize the knowledge for a better future.</p>
 							</header>
 							<ul class="icons major">
+								<h2>Skills<br /></h2>
 								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
+								<a href="https://www.flaticon.com/free-icons/python" title="python icons">Python icons created by Freepik - Flaticon</a>
 								<li><i class="devicon-androidstudio-plain colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-java-plain-wordmark colored" style="font-size: 120px"></i></li>
