--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 								   Just finished my studies and I am currently looking for a challenging position. <br/>
 								   My interests and experiences are includes Software Engineering, Backend Engineering and Mobile Engineering (specifically Android) as well as Full Stack Development on both Web and Mobile Apps. <br/>
 								   I strive to gain more experience and wish to utilize the knowledge for a better future.</p>
+								<h2>Skills<br /></h2>
 							</header>
 							<ul class="icons major">
-								<h2>Skills<br /></h2>
+								
 								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
@@ -52,6 +53,15 @@
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-java-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-flutter-plain colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
+								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
