--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
 								   Just finished my studies and I am currently looking for a challenging position. <br/>
 								   My interests and experiences are includes Software Engineering, Backend Engineering and Mobile Engineering (specifically Android) as well as Full Stack Development on both Web and Mobile Apps. <br/>
 								   I strive to gain more experience and wish to utilize the knowledge for a better future.</p>
-								<h2>Skills<br /></h2>
+								<h2>Skills</h2>
 							</header>
 							<ul class="icons major">
 								
 								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
-								<a href="https://www.flaticon.com/free-icons/python" title="python icons">Python icons created by Freepik - Flaticon</a>
-								<li><i class="devicon-androidstudio-plain colored" style="font-size: 120px"></i></li>
+								<li><img src="images/python.png" alt="" width="500" height="500"/></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-java-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-flutter-plain colored" style="font-size: 120px"></i></li>
