--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
-								<li><img src="images/python.png" alt="" width="500" height="500"/></li>
+								<li><img src="images/python.png" alt=""></li>
 								<li><i class="devicon-kotlin-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-java-plain-wordmark colored" style="font-size: 120px"></i></li>
 								<li><i class="devicon-flutter-plain colored" style="font-size: 120px"></i></li>
